tests/ui/typeck/foreign_struct_trait_unimplemented.stderr
error[E0277]: the trait bound `B: Test` is not satisfied
  --> $DIR/foreign_struct_trait_unimplemented.rs:13:16
   |
LL |     needs_test(foreign_struct_trait_unimplemented::B);
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Test` is not implemented for `B`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Test` is implemented for `A`
note: required by a bound in `needs_test`
  --> $DIR/foreign_struct_trait_unimplemented.rs:10:23
   |
LL | fn needs_test(_: impl Test) {}
   |                       ^^^^ required by this bound in `needs_test`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
